--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.7.1",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "react": "^19.0.0",
